--- a/css/boot.css
+++ b/css/boot.css
@@ -15,6 +15,8 @@
     height: 700px;
     float: left;
     overflow: hidden;
+    position: fixed;
+
     
 }
 .left .top{
@@ -60,6 +62,9 @@
     width: 950px;
     height: 700px;
     float: left;
+    position: absolute;
+    top: 0px;
+    left: 320px;
     background-color: #F9F9F9;
     border-left: 3px solid #F8EBEA;
     overflow: hidden;
